fixed nowrap

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -14,6 +14,7 @@
         width: 11ch;
         font-family: "Luxurious Roman", cursive;
         color: #27344b;
+        white-space: nowrap;
         position: relative;
         &::before {
           content: attr(data-text);
@@ -35,7 +36,8 @@
         100% {
           width: 0;
         }
-        70%,90% {
+        70%,
+        90% {
           width: 100%;
         }
       }
@@ -80,22 +82,22 @@
   }
 }
 
-@media (min-width:375px) {
-    .hero-container{
-        .inner-container{
-            .hero-info{
-                h2{
-                    font-size: 3rem;
-                }
-                h1{
-                    font-size: 2.5rem;
-                }
-                h3{
-                    font-size: 1.5rem;
-                }
-            }
+@media (min-width: 375px) {
+  .hero-container {
+    .inner-container {
+      .hero-info {
+        h2 {
+          font-size: 3rem;
         }
+        h1 {
+          font-size: 2.5rem;
+        }
+        h3 {
+          font-size: 1.5rem;
+        }
+      }
     }
+  }
 }
 
 @media (min-width: 768px) {
@@ -105,8 +107,8 @@
     align-items: center;
     .inner-container {
       width: 80%;
-      .hero-info{
-          width: auto;
+      .hero-info {
+        width: auto;
       }
       .hero-img {
         display: block;
